<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Github App</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="imguser">imgUser</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="htmlurl">htmlUrl</string>
    <string name="hint_search" tools:ignore="TypographyEllipsis">Type name here...</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
</resources>